assets/css/paper-kit.css
/* ... */
@media (max-width: 1367px) and (min-width: 1024px) {
  .presentation-page .section-components .basic-container {
    margin-left: 5em;
  }
}

@media (max-width: 500px) {
  .presentation-page .section-header .card {
    min-height: 230px;
  }
  #cards .card-profile {
    margin-top: 50px;
  }
  .pricing-5 .title {
    text-align: center;
  }
  .presentation-page .presentation-title {
    font-size: 4em;
  }
  .presentation-page .title-brand .type {
    font-size: 12px;
    padding: 4px 7px;
    border-radius: 4px;
    top: 0;
    font-weight: 600;
    margin-top: 20px;
    right: 2px;
  }
  .presentation-page .section-cards .codrops-header .description {
    max-width: 220px;
  }
  .register-page .page-header .container .info:first-of-type {
    margin-top: 50px;
  }
}

@media screen and (max-width: 1367px) {
  .presentation-page .section-cards,
  .presentation-page .section-components {
    overflow: hidden;
  }
}

@media screen and (min-width: 1025) {
  .section-sections .section-cols {
    position: relative;
    z-index: 1;
  }
  .section-sections .section-cols .row:first-of-type {
    margin-top: 50px;
    margin-right: -120px;
    margin-left: -15px;
    -webkit-transform: translateX(-80px);
    -moz-transform: translateX(-80px);
    -o-transform: translateX(-80px);
    -ms-transform: translateX(-80px);
    transform: translateX(-80px);
  }
  .section-sections .section-cols .row:nth-of-type(2) {
    margin-left: -100px;
    margin-right: -15px;
    transform: translateX(80px);
  }
  .section-sections .section-cols .row:nth-of-type(3) {
    margin-right: -120px;
    margin-left: 0px;
    transform: translateX(-120px);
  }
  .section-sections .section-cols .row:nth-of-type(4) {
    margin-right: -100px;
    margin-left: -15px;
    transform: translateX(-50px);
  }
}

@media only screen and (min-width: 1024px) {
  .demo-icons ul li {
    width: 12.5%;
    float: left;
    padding: 32px 0;
  }
}

@media (max-width: 1200px) {
  .presentation-page .presentation-title {
    font-size: 7em;
  }
  .presentation-page .title-brand {
    max-width: 650px;
  }
}

@media (max-width: 1200px) {
  .presentation .section-images .image img {
    width: 100%;
  }
}

@media screen and (max-width: 374px) {
  .footer.footer-big .copyright .pull-left,
  .footer.footer-big .copyright .pull-right {
    float: none !important;
  }
  .full-screen.login .card.card-register {
    margin-bottom: 20px;
  }
  .full-screen.login .demo-footer {
    margin-left: -15px;
  }
  .about-us .header-wrapper {
    height: auto !important;
  }
  .presentation-page .section-content .image-container .area-img {
    max-width: 170px !important;
  }
}
.profile-content{
  background: #edf2f6;
}
.card{
  box-shadow: 0px 12px 19px -7px rgba(0, 0, 0, 0.3);
  margin-bottom: 40px;
}
.card a:not(.btn){
      padding: 0 7% 0 0;
}
.comment-number{
  padding: 0;
    color: #000 !important;
    font-size: 11px;
    font-weight: normal !important;
}
.new_anchor_style{
    border-top: 1px solid #ddd;
    padding: 10px 20px !important;
}
.new_anchor_style a{
   color: #000 !important;
    font-weight: normal !important;
}

.card .comment-container{
  padding-bottom: 0;
}
@media (max-width: 768px) {
  .btn.btn-primary{ display: block; }
}
.down-arrow {
  border-color: #51cbce transparent;
    border-style: solid;
    border-width: 13px 14px 0px 14px;
    height: 0px;
    width: 0px;
    position: absolute;
    top: 46px;
    left: 63%;
    color: #fff;
}
.input-group>.form-control{
  border-left: 1px solid #DDDDDD;
  border-top-left-radius: 4px !important ;
    border-bottom-left-radius: 4px !important;
}

.img-comment{
      width: 35px !important;
    height: 35px !important;
    border-radius: 50% !important;
    margin-right: 10px;
}
.users_list a{
    font-weight: bold;
}
.section{
    padding-top: 0;
    padding-bottom: 0;
}
.post-comments{
  padding-top: 50px;
  padding-bottom: 50px;
}
.post-comments h4{
  font-size: 2.5rem;
  font-weight: 400;
  margin: 35px 0;
}
.post-comments p{
  font-weight: 300;
    font-size: 18px;
    line-height: 1.9;
    color: #6c757d;
}
.post-comments h3{
  font-weight: 900;
  margin:70px 0;

}
.comment-body{
  overflow: hidden;
}
.comment-body .image{
  float: left;
  width: 60px;
  height: 60px;
}
.comment-body img{
  width: 100%;
    height: 100%;
    border-radius: 50%;
}
.comment-body .desc{
  float: right;
  width: calc(100% - 80px);
}
.comment-body .name{
  font-weight: 666
}
.img-circle{
  border : 5px solid #fff;
  box-shadow: 0 10px 30px -10px rgba(0,0,0,.4);
}
.profile-post{
  text-align: center;
    padding: 15px;
    background: #fff;
    border: 1px solid #e6e6e6;
    padding-bottom: 30px;
}
.profile-post .image{
  width: 100px;
    height: 100px;
    margin: auto;
    margin-top: -65px;
}
.profile-post .image img{
  width: 100%;
    height: 100%;
    border-radius: 50%;
    border: 4px solid #fff;
    box-shadow: 0 10px 30px -10px rgba(0,0,0,.4);
}
.profile-post h4{
  font-size: 20px;
}
.profile-post p{
  font-weight: lighter;
  font-size: 15px;
}
.profile-post a{
  margin-top: 20px;
}

